--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,10 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled false
+            debuggable true
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
