apply from: '../library.gradle'

--- a/HjdsRouterLib/build.gradle
+++ b/HjdsRouterLib/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.piaoguodeyu'
+//apply plugin: 'com.github.dcendents.android-maven'
+//group='com.github.piaoguodeyu'
 android {
     compileSdkVersion 28
 
@@ -17,7 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
