--- a/HjdsRouterProcessor/src/main/AndroidManifest.xml
+++ b/HjdsRouterProcessor/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hjds.loginlib" />
+    package="com.hjds.hjdsrouterprocessor">
+
+</manifest>
