--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            //配置注解处理器参数
-            annotationProcessorOptions {
-                arguments = [moduleName: defaultConfig.getName()]
-            }
-        }
+//        javaCompileOptions {
+//            //配置注解处理器参数
+//            annotationProcessorOptions {
+//                arguments = [moduleName: defaultConfig.getName()]
+//            }
+//        }
     }
     buildTypes {
         debug {
@@ -45,6 +45,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     annotationProcessor project(":HjdsRouterProcessor")
     api project(path: ':HjdsRouterLib')
-    api project(path: ':LoginLib')
-
 }
