--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app'
+include ':app', ':LoginLib'
 //rootProject.name='JdsRouter'
 include  ':HjdsRouterLib'
 include  ':HjdsRouterProcessor'
