--- a/HjdsRouterProcessor/build.gradle
+++ b/HjdsRouterProcessor/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java-library'
-apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.piaoguodeyu'
+//apply plugin: 'com.github.dcendents.android-maven'
+//group='com.github.piaoguodeyu'
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     //javaPoet可以更方便的创建java文件
