--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,5 @@ android.enableJetifier=true
 org.gradle.daemon=true
 #org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 
+#org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 
