--- a/HjdsRouterLib/build.gradle
+++ b/HjdsRouterLib/build.gradle
@@ -16,6 +16,7 @@ android {
 
     buildTypes {
         debug {
+            debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
