--- a/HjdsRouterLib/src/main/AndroidManifest.xml
+++ b/HjdsRouterLib/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <provider
-            android:name=".util.HjdsProider"
+            android:name=".router.HjdsProider"
             android:authorities="${applicationId}.hjdsrouter-init-provider"
             android:exported="false"
             android:multiprocess="true" />
