--- a/LoginLib/build.gradle
+++ b/LoginLib/build.gradle
@@ -13,6 +13,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
+        javaCompileOptions {
+            //配置注解处理器参数
+            annotationProcessorOptions {
+                arguments = [jdsModuleName: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -31,4 +37,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    annotationProcessor project(":HjdsRouterProcessor")
+    implementation project(path: ':HjdsRouterLib')
 }
