--- a/HjdsRouterLib/build.gradle
+++ b/HjdsRouterLib/build.gradle
@@ -17,7 +17,7 @@ android {
     buildTypes {
         debug {
             debuggable true
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
