--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,15 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+//        maven {//本地Maven仓库地址
+//            url uri('/Users/zxw/Desktop/plugin')
+//        }
         maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.github.piaoguodeyu:JRouterPlugin:1.0.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +22,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+//        maven {//本地Maven仓库地址
+//            url uri('/Users/zxw/Desktop/plugin')
+//        }
         maven { url "https://jitpack.io" }
     }
 }
